# python-cli-applications

./: Pipfile  README.md  pyproject.toml
argparse/: setup.py
argparse-app/: README.md  setup.py
argparse-app/cli/: main.py
argparse-app/safekey/: __init__.py  app.py  core.py
argparse/cli/: main.py
argparse/stock/: core.py
cement-app/: README.md  setup.py
cement-app/cli/: main.py
cement-app/safekey/: app.py
click/: README.md  setup.py
click-app/: README.md  setup.py
click-app/cli/: main.py
click-app/safekey/: app.py
click/cli/: info.py  main.py
click/stock/: ticker.py
cliff-app/: README.md  setup.py
cliff-app/cli/: main.py
cliff-app/cli/commands/: __init__.py  add.py  get.py  list.py  remove.py  update.py
docopt-ng-app/: README.md  setup.py
docopt-ng-app/cli/: main.py
plac-app/: README.md  setup.py
plac-app/cli/: main.py
prompt-toolkit-app/: README.md  setup.py
prompt-toolkit-app/cli/: main.py
python-fire-app/: README.md  setup.py
python-fire-app/cli/: main.py
task-cli-click/: README.md
task-cli-click/app/: task.py
task-cli-click/cli/: info.py  main.py
task-cli-typer/: README.md  setup.py
task-cli-typer/cli/: main.py
typer-app/: README.md  setup.py
typer-app/cli/: main.py
